style.css
body{
  background-color: lightgray
}

div{
  background-color: white;
  text-align: center;
  width: 60%;
  margin-left: auto;
  margin-right:auto;
  padding: 15px;
  border-radius: 10px;
}


#liknedin { 
	transition: all .5s ease-in-out; 
}
#linkedin:hover { 
    	transform: scale(1.2); 
    }

img{
    height: auto; 
    width: 80%; 
}

#div2{
  margin-top: 25px;
  text-align: left;
  width:90%
}

